static/themes/default/theme.css
/*
    Theme Name: Default
    Theme Desc: This is the default theme for Kiwi IRC.
    Author: @prawnSalad
    Edited: @allanOcelot // 20/02/2019
*/

:root {
    /* Primary Variables */
    --brand-primary: #42b992;
    --brand-primary-hover: #5ec9a6;
    --brand-midtone: #f1f1f1;
    --brand-darktone: #969696;
    --brand-bg-default: #fff;
    --brand-fg-default: #22231f;

    /* Warning colors */
    --brand-notice: #f6c358;
    --brand-warning: #fcb46e;
    --brand-error: #bf5155;

    /* Connection Indicator top */
    --comp-bg-workspace-before: var(--brand-primary);
    --comp-bg-kiwi-workspace--disconnected-after: var(--brand-error);

    /* Container Header */
    --comp-bg-header: var(--brand-bg-default);
    --comp-fg-header-name: var(--brand-fg-default);
    --comp-fg-header-option-active: var(--brand-bg-default);
    --comp-bg-header-option-active: var(--brand-primary);

    /* StateBrowser */
    --comp-bg-statebrowser: var(--brand-fg-default);
    --comp-bg-networkname--active: #454545;
    --comp-bg-usermenu-open: #0e0e0e;

    /* Sidebars ( Right Side ) */
    --comp-bg-aboutbuffer: rgba(0, 0, 0, 0.03);
    --comp-bg-aboutbuffer-h4: #42b992;

    /* Misc */
    --brand-link-normal: #0093ce;
    --brand-link--hover:  #3db0de;
    --brand-shadow: rgba(0, 0, 0, 0.1);
    --comp-border: #b2b2b2;
}

/* ---- Welcome Screens ----- */
.kiwi-welcome-simple-form,
.kiwi-customserver-form {
    background-color: var(--brand-bg-default);
    border: 1px solid var(--brand-midtone);
}

.kiwi-welcome-simple-error {
    border: 1px dashed var(--brand-error);
}

.kiwi-welcome-simple-form .u-submit {
    background-color: var(--brand-primary);
    color: var(--brand-bg-default);
}

.kiwi-welcome-simple .help,
.kiwi-welcome-simple .help a {
    color: var(--brand-fg-default);
}

.kiwi-welcome-simple .help a:hover {
    color: var(--brand-primary-hover);
}

/* ---- Gloabl Styling ---- */
.kiwi-theme-bg {
    background-color: var(--brand-bg-default);
}

.u-tabbed-content {
    background-color: var(--brand-bg-default);
}

.u-tabbed-view-tabs {
    background: var(--brand-midtone);
    border-bottom: 3px solid var(--brand-midtone);
}

.u-tabbed-view-tabs .u-tabbed-view-tab {
    border-bottom-color: var(--brand-midtone);
    background: var(--brand-bg-default);
}

.u-tabbed-view-tabs .u-tabbed-view-tab:hover,
.u-tabbed-view-tabs .u-tabbed-view-tab.u-tabbed-view-tab--active {
    border-bottom-color: var(--brand-primary);
}

/* ---- Global : User inputs ---- */
.u-input-text {
    background: var(--brand-bg-default);
}

.u-input-text-label {
    color: var(--fg-default);
}

.u-input-text--focus {
    border-color: var(--brand-primary);
}

.u-input-text-underline {
    border-color: var(--brand-darktone);
}

.u-input-text-underline-active {
    background: var(--brand-primary);
}

.u-form .u-input,
.u-form textarea {
    border-color: var(--brand-midtone);
    border-bottom-color: var(--brand-primary);
    outline-color: var(--brand-primary);
}

.u-form label input[type='text'],
.u-form label input[type='password'],
.u-form label input[type='email'],
.u-form textarea,
.kiwi-networksettings input[type='password'] {
    border-color: var(--brand-primary);
}

::-webkit-input-placeholder,
::-moz-placeholder,
::-ms-placeholder,
::placeholder {
    color: black;
}

/* ---- Global : Checkbox input ---- */
.u-form input[type='checkbox'],
.u-form input[type='radio'] {
    border-color: var(--brand-fg-default);
    background-color: var(--brand-bg-default);
}

.u-form input[type='checkbox']::after,
.u-form input[type='radio']::after {
    background: var(--brand-primary);
}

/* ---- Global : Buttons ---- */
.u-button-primary {
    background-color: var(--brand-primary);
    color: var(--brand-bg-default);
}

.u-button-primary:hover {
    background-color: var(--brand-primary-hover);
}

.u-button-secondary {
    background: rgba(117, 117, 117, 0.07);
    border-bottom: 1px solid rgba(117, 117, 117, 0.2);
}

.u-button-warning {
    background-color: var(--brand-error);
    border-bottom: 1px solid var(--brand-error);
    color: var(--brand-bg-default);
}

/* ---- Global : Links / anchors etc ---- */
.u-link {
    color: var(--brand-primary);
}

/* ---- Container Header ( containerHeader ) ---- */
.kiwi-header {
    background: var(--comp-bg-header);
    border-bottom-color: var(--comp-border);
}

.kiwi-header-name {
    color: var(--comp-fg-header-name);
}

.kiwi-header-option a:hover,
.kiwi-header-option--active,
.kiwi-header-option--active:hover a {
    background-color: var(--comp-bg-header-option-active);
    color: var(--comp-fg-header-option-active);
    opacity: 1;
}

.kiwi-header-option--active,
.kiwi-header-option-active a {
    opacity: 1;
}

.kiwi-header-option-leave a:hover,
.kiwi-header-option-unpinsidebar a:hover {
    background-color: var(--brand-error);
    color: var(--brand-bg-default);
}

.kiwi-header-join-channel-button {
    background-color: var(--brand-primary);
    color: var(--brand-bg-default);
}

.kiwi-header .kiwi-header-notjoined .u-link {
    background-color: var(--brand-primary);
    color: var(--brand-bg-default);
}

.kiwi-header .kiwi-header-notjoined .u-link:hover {
    background-color: var(--brand-primary-hover);
}

.kiwi-header-server-connection .u-button {
    background: var(--brand-primary);
    color: var(--brand-bg-default);
}

/* End of Container Header ( containerHeader ) */

/* ---- Control Input ( controlInput ) ---- */
.kiwi-controlinput {
    background: var(--brand-bg-default);
    border-top-color: var(--comp-border);
}

.kiwi-controlinput .kiwi-controlinput-user,
.kiwi-controlinput-inner .kiwi-controlinput-user {
    border-right-color: var(--comp-border);
}

.kiwi-controlinput-send {
    background: #f1f1f1;
}

.kiwi-controlinput-tools {
    background: #f1f1f1;
}

.kiwi-controlinput-active-tool {
    background: #f6f6f6;
}
/* ... */

